--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3370,7 +3370,7 @@
                           href="https://en.wikipedia.org/wiki/C0_and_C1_control_codes" class="has-text-link">C0
                           controls</a> usually reserved for formatting as text characters.
                         Normally hidden, enabling this option will reveal these glyphs in the text document.
-                        <span class="has-text-info">Any open tabs will require a reload.</span>
+                        <br><span class="has-text-info">Any open tabs will require a reload.</span>
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
                           class="has-text-grey">off</span></p>
@@ -3401,7 +3401,7 @@
                           class="msg-artifact">artifact</span>s when showing block characters in sequences.
                         This option implements a <code>text-shadow:1px</code> CSS property to all block characters
                         to correct this at the expense font sharpness.
-                        <span class="has-text-info">Any open tabs will require a reload.</span>
+                        <br><span class="has-text-info">Any open tabs will require a reload.</span>
                       </p>
                       <p class="is-size-7 mt-2 mb-1">standard text</p>
                       <p name="display-sample-text" class="font-ibm_vga_8x16 has-text-weight-normal">◘░▒▓███▄▐▌▀███■
@@ -3492,7 +3492,7 @@
                     <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">Unless
                       SAUCE width information exists, this enforces an 80 character width for all
                       ANSI files to emulate the classic 80 column terminal screen.
-                      <span class="has-text-info">Any open tabs will require a reload.</span>
+                      <br><span class="has-text-info">Any open tabs will require a reload.</span>
                     </p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
                         class="has-text-success">on</span></p>
@@ -3882,10 +3882,10 @@
                   </article>
                   <h2 class="title has-text-dark is-size-6 columns">
                     <div class="column">Run RetroTxt on files hosted on these domains
-                      <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">
+                      <p class="subtitle has-text-dark is-size-7 has-text-justified">
                         Runs in the background and applies RetroTxt to text files
                         hosted on these websites.</p>
-                      <div class="field is-grouped is-grouped-multiline mt-2" id="hostTags">
+                      <div class="field is-grouped is-grouped-multiline mt-4 mb-3" id="hostTags">
                         <div class="control" style="display: none;" id="templateHost">
                           <div class="tags has-addons">
                             <a class="tag is-link">example.com</a>
