--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -278,11 +278,10 @@
                 <div class="tile is-parent">
                   <article class="tile is-child box is-info is-shadowless">
                     <div class="content">
-                      To get you started, here are a few links to sample some <a
-                        href="https://en.wikipedia.org/wiki/ANSI_art">ANSI</a> and <a
-                        href="https://en.wikipedia.org/wiki/ASCII_art">ASCII</a> pieces.<br>
-                      There is still a thriving text art community releasing monthly packs on <a
-                        href="https://16colo.rs">16colo.rs</a> with dozens of new artworks every month.<br>
+                      Here are a few links to sample some <a href="https://en.wikipedia.org/wiki/ANSI_art">ANSI</a> and
+                      <a href="https://en.wikipedia.org/wiki/ASCII_art">ASCII</a> pieces to get you started.<br>
+                      A thriving text art community is still releasing monthly packs on <a
+                        href="https://16colo.rs"><u>16colo.rs</u></a> with dozens of new artworks every month.<br>
                       <small>Other than the RetroTxt ad, none of the fantastic artworks shown below, or their creators,
                         endorse or have any association with RetroTxt.</small>
                     </div>
@@ -3280,8 +3279,8 @@
                     <div class="column is-2"> </div>
                   </h2>
                   <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">Line height lets you add margin
-                    spacing to each line of text. The line-height value is relative to the size of the font.
-                    Line height 1 matches the font size while a weight of 1.25 would be 25% larger than the font's
+                    spacing to each line of text. The line height value is relative to the size of the font.
+                    Line height 1 matches the font size, while a weight of 1.25 would be 25% larger than the font's
                     height.
                   </p>
                   <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
@@ -3311,8 +3310,8 @@
                   <h2 class="title has-text-dark is-size-6 columns">
                     <div class="column">Background scan lines
                       <p class="subtitle has-text-dark is-size-7 mb-0 has-text-justified">Apply a subtle scan line
-                        effect to the backdrop of the page. The result is more pronounced on light backgrounds and
-                        it does not overlay text.</p>
+                        effect to the backdrop of the page. The result is more pronounced on light backgrounds and does
+                        not overlay text.</p>
                     </div>
                     <div class="column is-2">
                       <div class="toggleswitch">
@@ -3369,7 +3368,7 @@
                         not standards-compliant as it uses <a
                           href="https://en.wikipedia.org/wiki/C0_and_C1_control_codes" class="has-text-link">C0
                           controls</a> usually reserved for formatting as text characters.
-                        Normally hidden, enabling this option will reveal these glyphs in the text document.
+                        Customarily hidden, enabling this option will reveal these glyphs in the text document.
                         <br><span class="has-text-info">Any open tabs will require a reload.</span>
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
@@ -3400,7 +3399,7 @@
                           name="browser-title">Chrome</span> can cause vertical line <span
                           class="msg-artifact">artifact</span>s when showing block characters in sequences.
                         This option implements a <code>text-shadow:1px</code> CSS property to all block characters
-                        to correct this at the expense font sharpness.
+                        to correct this at the expense of font sharpness.
                         <br><span class="has-text-info">Any open tabs will require a reload.</span>
                       </p>
                       <p class="is-size-7 mt-2 mb-1">standard text</p>
@@ -3490,8 +3489,8 @@
                 <h2 class="title has-text-dark is-size-6 columns mb-0">
                   <div class="column">80 column wrap
                     <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">Unless
-                      SAUCE width information exists, this enforces an 80 character width for all
-                      ANSI files to emulate the classic 80 column terminal screen.
+                      SAUCE width information exists, this enforces an 80-character width for all
+                      ANSI files to emulate the classic 80-column terminal screen.
                       <br><span class="has-text-info">Any open tabs will require a reload.</span>
                     </p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
@@ -3511,8 +3510,8 @@
                     <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">By design, ANSI text
                       preserves white space sequences with any text-overflow reachable via horizontal
                       scrollbars. With page wrap enabled, ANSI text will behave as HTML, where overflow lines can break
-                      to wrap the text.<br>Page wrap is useful for reading <span class="msg-color">color</span>ed text
-                      and logs, but the <em>80 column wrap</em> should be off.</p>
+                      to wrap the text.<br>Page wrap helps read <span class="msg-color">color</span>ed text
+                      and logs, but the <em>80-column wrap</em> should be off.</p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend for artwork <span
                         class="has-text-grey">off</span></p>
                   </div>
@@ -3549,10 +3548,11 @@
                   <h1 class="title has-text-black-ter is-size-3 mt-4"><span class="msg-color">Color</span>s</h1>
                   <h2 class="title has-text-dark is-size-6 columns">
                     <div class="column">Text pairs
-                      <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">Here you can choose a font
-                        and a background <span class="msg-color">color</span> for all text handled by RetroTxt. The
-                        named themes are inspirations from the <span class="msg-color">color</span> choices found on
-                        historic home computer systems and terminals.
+                      <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">
+                        Here you can choose a font and a background <span class="msg-color">color</span> for all text
+                        handled by RetroTxt.
+                        The named themes are inspired by the <span class="msg-color">color</span> choices on historic
+                        home computer systems and terminals.
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
                           class="has-text-info">ms-dos</span></p>
@@ -3644,7 +3644,7 @@
                     <div class="column" id="customColorValues">Custom <span class="msg-color">color</span>
                       values
                       <p class="subtitle has-text-dark is-size-7 has-text-justified">Allows you to supply
-                        your own foreground and background <span class="msg-color">color</span>s for the Text
+                        your foreground and background <span class="msg-color">color</span>s for the Text
                         pairs.</p>
                     </div>
                     <div class="column is-2"></div>
@@ -3845,8 +3845,9 @@
                     <div class="column">Options theme</div>
                     <div class="column is-2"> </div>
                   </h2>
-                  <p class="subtitle has-text-dark is-size-7 has-text-justified mb-4">The options theme sets the
-                    background and button <span class="msg-color">color</span> of this options tab interface.
+                  <p class="subtitle has-text-dark is-size-7 has-text-justified mb-4">
+                    The options theme sets this options tab interface's background and button
+                    <span class="msg-color">color</span>.
                   </p>
                   <div id="optionTheme">
                     <div class="buttons are-small mb-0">
@@ -3883,7 +3884,7 @@
                   <h2 class="title has-text-dark is-size-6 columns">
                     <div class="column">Run RetroTxt on files hosted on these domains
                       <p class="subtitle has-text-dark is-size-7 has-text-justified">
-                        Runs in the background and applies RetroTxt to text files
+                        It runs in the background and applies RetroTxt to text files
                         hosted on these websites.</p>
                       <div class="field is-grouped is-grouped-multiline mt-4 mb-3" id="hostTags">
                         <div class="control" style="display: none;" id="templateHost">
@@ -3989,8 +3990,9 @@
                   <h2 class="title has-text-dark is-size-6 columns">
                     <div class="column">
                       Information header
-                      <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">When styling text RetroTxt
-                        injects a text header detailing the document metadata and style controls.</p>
+                      <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">
+                        RetroTxt injects a text header detailing the document metadata and style controls when styling
+                        text.</p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
                           class="has-text-info">always</span></p>
                       <form name="infoheader" id="info-form">
