fixed flickering menus.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -55,21 +55,24 @@
               </div>
               <div id="navbarMenuHeroA" class="navbar-menu">
                 <div class="navbar-end">
-                  <a class="navbar-item is-active" id="hero0" href="">
+                  <a class="navbar-item is-active" id="hero0" href="#top">
                     Home
                   </a>
-                  <a class="navbar-item" id="hero4" href="">
+                  <a class="navbar-item" id="hero4" href="#top">
                     Fonts
                   </a>
-                  <a class="navbar-item" id="hero5" href="">
+                  <a class="navbar-item" id="hero5" href="#top">
                     Display
                   </a>
-                  <a class="navbar-item" id="hero6" href="">
+                  <a class="navbar-item" id="hero6" href="#top">
                     Settings
                   </a>
-                  <a class=" navbar-item" id="hero7" href="">
+                  <a class=" navbar-item" id="hero7" href="#top">
                     Documentation
                   </a>
+                  <a class="navbar-item" id="hero1" href="#top">Credits</a>
+                  <a class="navbar-item" id="hero2" href="#top">Samples</a>
+                  <a class="navbar-item" id="hero3" href="#top">Useful</a>
                   <span class="navbar-item">
                     <a class="button is-primary is-inverted" id="getTheSource"
                       href="https://github.com/bengarrett/RetroTxt" title="Get the source code hosted on GitHub">
@@ -4103,9 +4106,6 @@
           <nav class="tabs">
             <div class="container">
               <ul>
-                <li><a class="navbar-item" id="hero1" href="">Credits</a></li>
-                <li><a class="navbar-item" id="hero2" href="">Samples</a></li>
-                <li><a class="navbar-item" id="hero3" href="">Useful</a></li>
                 <li id="unittest" style="display: none;">
                   <a href="../test/index.html?hidepassed"><svg role="img" class="material-icons" target="_blank">
                       <use xlink:href="../assets/svg/material-icons.svg#bug_report"></use>
