--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -75,7 +75,8 @@
                   <a class="navbar-item" id="hero3" href="#top">Useful</a>
                   <span class="navbar-item">
                     <a class="button is-primary is-inverted" id="getTheSource"
-                      href="https://github.com/bengarrett/RetroTxt" title="Get the source code hosted on GitHub">
+                      href="https://github.com/bengarrett/RetroTxt/tree/manifest-v2"
+                      title="Get the source code hosted on GitHub">
                       <span class="icon">
                         <svg role="img" class="material-icons">
                           <use xlink:href="../assets/svg/material-icons.svg#code"></use>
@@ -108,6 +109,7 @@
             <h1 class="title is-size-1">
               RetroTxt
             </h1>
+            <h3 class="subtitle"><em>for manifest V2</em></h3>
             <h2 class="subtitle">
               v<span id="manifest">0.0.0</span>
               <span id="technobabble">
@@ -4052,50 +4054,14 @@
               <div class="box">
                 <h1 class="title has-text-black-ter is-size-3 mt-4">Documentation</h1>
                 <hr>
-                <h2 class="subtitle has-text-black-ter is-size-4">Support</h2>
                 <ul>
-                  <li><a href="https://github.com/bengarrett/RetroTxt#readme">The readme with installation
-                      instructions</a>
+                  <li><a href="https://docs.retrotxt.com">Documentation website</a></li>
+                  <li>&nbsp;</li>
+                  <li><a href="https://github.com/bengarrett/RetroTxt/tree/manifest-v2#readme">
+                      The README with installation instructions</a>
                   </li>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/limitations.md">Limitations and
-                      known issues</a></li>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/SUPPORT.md">FAQ - Common
-                      questions and fixes</a></li>
-                </ul>
-                <hr>
-                <h2 class="subtitle has-text-black-ter is-size-4">Documentation</h2>
-                <ul>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/menus.md">Context menu, Transcode
-                      this text</a></li>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/main/docs/source_code.md">Source code and how
-                      to use it</a></li>
-                </ul>
-                <ul class="mt-2">
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/technical.md">Technical
-                      specifications on supported formats</a>
-                  </li>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/changes.md">Version changes</a>
-                  </li>
-                </ul>
-                <hr>
-                <h2 class="subtitle has-text-black-ter is-size-4">Dev-ops</h2>
-                <ul>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/nginx.md">Configure NGINX to
-                      serve ASCII & ASCII art</a></li>
-                </ul>
-                <hr>
-                <h2 class="subtitle has-text-black-ter is-size-4">Policies</h2>
-                <ul>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/privacy.md">Privacy policy</a> /
-                    <a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/SECURITY.md">Security policy</a>
-                  </li>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/CODE_OF_CONDUCT.md">Code of
-                      conduct</a></li>
-                </ul>
-                <ul class="mt-2 mb-2">
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/CONTRIBUTING.md">Contributing
-                      documentation or code</a></li>
-                  <li><a href="https://choosealicense.com/licenses/lgpl-3.0/">License</a></li>
+                  <li><a href="https://docs.retrotxt.com/limitations/">
+                      Limitations and known issues</a></li>
                 </ul>
               </div>
             </div>
