Sample text includes both lower and uppercase retrotxt RETROTXT.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -684,7 +684,7 @@
                   <pre id="sampleTerminal" class="is-full">
 
  ┌─────────────────────────────────────────────
- │ RetroTxt ▄▄█▀▀╔═╝░░▒▒▓▓ ⌐ ½ ≈ ¼ <span id="sampleDOSCtrls">♪→⌂</span>
+ │ retrotxt RETROTXT ▄▄█▀▀╔═╝░░▒▒▓▓ ⌐ ½ ≈ ¼ <span id="sampleDOSCtrls">♪→⌂</span>
  │ The quick brown fox jumps over the lazy dog.
  └─────────────────────────────────────────────<span id="sampleCursor">_</span>
 
