updated url schemes to use https. fixed broken links.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -181,7 +181,7 @@
                     </p>
                     <ul class="menu-list">
                       <li>
-                        <a href="http://google.github.io/material-design-icons">Material Design</a>
+                        <a href="https://developers.google.com/fonts/docs/material_icons">Material Design</a>
                       </li>
                     </ul>
                     <p class="menu-label">
@@ -200,11 +200,11 @@
                   <aside class="menu">
                     <ul class="menu-list">
                       <li>
-                        <a href="http://int10h.org/oldschool-pc-fonts"><strong>Viler</strong>, Ultimate Oldschool PC
+                        <a href="https://int10h.org/oldschool-pc-fonts"><strong>Viler</strong>, Ultimate Oldschool PC
                           Font Pack<p class="is-size-7">PC/MS-DOS, video hardware, semi-compatibles</p></a>
                       </li>
                       <li>
-                        <a href="http://www.kreativekorp.com/software/fonts/index.shtml"><strong>Rebecca G.
+                        <a href="https://www.kreativekorp.com/software/fonts/index.shtml"><strong>Rebecca G.
                             Bettencourt</strong>, Kreative Korp - Retro Computing Fonts
                           <p class="is-size-7">Apple II, Apple Lisa, Commodore 64, TRS-80, Atari, Sharp MZ, ZX
                             Spectrum, Gameboy, Antiquarius...</p>
@@ -225,7 +225,7 @@
                           mO'sOul<p class="is-size-7">Commodore Amiga</p></a>
                       </li>
                       <li>
-                        <a href="http://www.dafont.com/atari-st-8x16-system-font.font"><strong>divVerent</strong>, 8x16
+                        <a href="https://www.dafont.com/atari-st-8x16-system-font.font"><strong>divVerent</strong>, 8x16
                           System
                           <p class="is-size-7">Atari ST high-resolution</p>
                         </a>
@@ -237,7 +237,7 @@
                         <a href="https://github.com/IBM/plex"><strong>IBM Corp.</strong>, Plex Mono</a>
                       </li>
                       <li>
-                        <a href="http://aminet.net/package/comm/amiex/PottySrc"><strong>Leo Davidson/Nudel</strong>,
+                        <a href="https://aminet.net/package/comm/amiex/PottySrc"><strong>Leo Davidson/Nudel</strong>,
                           P0T-NOoDLE<p class="is-size-7">Commodore Amiga</p></a>
                       </li>
                       <li>
@@ -260,7 +260,7 @@
                           Amiga Fonts<p class="is-size-7">Commodore Amiga</p></a>
                       </li>
                       <li>
-                        <a href="http://style64.org/c64-truetype"><strong>Style</strong>, C64 Pro
+                        <a href="https://style64.org/c64-truetype"><strong>Style</strong>, C64 Pro
                           <p class="is-size-7">Commodore 8-bit</p>
                         </a>
                       </li>
@@ -269,7 +269,7 @@
                           Unscii</a>
                       </li>
                       <li>
-                        <a href="http://monafont.sourceforge.net/index-e.html"><strong>Yasuyuki Furukawa</strong>,
+                        <a href="https://monafont.sourceforge.net/index-e.html"><strong>Yasuyuki Furukawa</strong>,
                           <strong>Kazuhiko</strong>, <strong>Kenzi Cano</strong>, Monafont
                           <p class="is-size-7">Shift JIS</p>
                         </a>
@@ -598,7 +598,7 @@
                       Warez</a>
                   </li>
                   <li>
-                    <a href="http://thenewordermag.com/tno/the-art-of-warez">The Art Of Warez - The New Order</a>
+                    <a href="https://thenewordermag.com/tno/the-art-of-warez">The Art Of Warez - The New Order</a>
                   </li>
                 </ul>
                 <p class="menu-label">Make your art</p>
@@ -607,7 +607,7 @@
                     <a href="https://blocktronics.github.io/moebius">Moebius</a>
                   </li>
                   <li>
-                    <a href="http://picoe.ca/products/pablodraw">PabloDraw</a>
+                    <a href="https://picoe.ca/products/pablodraw">PabloDraw</a>
                   </li>
                 </ul>
               </aside>
@@ -864,7 +864,7 @@
                   <a id="navApple"></a>
                   <h2 class="title has-text-dark is-size-6 mt-4">
                     Apple II
-                    <a href="http://www.kreativekorp.com/software/fonts/apple2.shtml#pr" target="_blank">
+                    <a href="https://www.kreativekorp.com/software/fonts/apple2.shtml#pr" target="_blank">
                       <svg role="img" class="material-icons has-text-info is-size-7">
                         <use xlink:href="../assets/svg/material-icons.svg#info"></use>
                       </svg>
@@ -888,7 +888,7 @@
                   <!-- GEOS -->
                   <h2 class="title has-text-dark is-size-6 mt-4">
                     GEOS for the Apple II
-                    <a href="http://www.kreativekorp.com/software/fonts/apple2.shtml#berk" target="_blank">
+                    <a href="https://www.kreativekorp.com/software/fonts/apple2.shtml#berk" target="_blank">
                       <svg role="img" class="material-icons has-text-info is-size-7">
                         <use xlink:href="../assets/svg/material-icons.svg#info"></use>
                       </svg>
@@ -909,7 +909,7 @@
                   <!-- Apple GS/OS -->
                   <h2 class="title has-text-dark is-size-6 mt-4">
                     Apple GS/OS
-                    <a href="http://www.kreativekorp.com/software/fonts/apple2.shtml#shaston" target="_blank">
+                    <a href="https://www.kreativekorp.com/software/fonts/apple2.shtml#shaston" target="_blank">
                       <svg role="img" class="material-icons has-text-info is-size-7">
                         <use xlink:href="../assets/svg/material-icons.svg#info"></use>
                       </svg>
