rm v5 specific info from update.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -106,13 +106,8 @@
             <div class="notice" style="display: none;" id="updateNotice">
               <div class="notification is-info">
                 <button id="updateNoticeBtn" class="delete" title="Close update tab"></button>
-                <p class="mb-2 is-size-2">RetroTxt is up to date</p>
+                <p class="mb-2 is-size-2">Update applied</p>
                 <p class="mt-2 is-size-4"><a href="#top" id="changesLink">See what is new</a></p>
-                <p class="mt-2 is-size-5">RetroTxt v5 is using the new <a
-                    href="https://developer.chrome.com/blog/mv2-transition/">Manifest
-                    V3</a> API</p>
-                <p class="mt-2 is-size-5">Unfortunately, this mandatory change means
-                  some prior settings from RetroTxt v4 might be lost
               </div>
               <div class="notification is-primary" id="enjoyRetroTxt">
                 <p id="5starChrome" style="display: none;">
