--- a/ext/html/popup.html
+++ b/ext/html/popup.html
@@ -1,20 +1,17 @@
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8" />
-  <script src="../scripts/popup.js"></script>
+  <script src="../scripts/popup.js" defer></script>
+  <link rel="stylesheet" href="../css/bulma.min.css" />
   <style>
     body {
       font-size: medium;
-      width: 30em;
+      width: 33em;
     }
 
-    div {
-      font-weight: bold;
-      text-align: center;
-    }
-
-    p#allowAccess {
+    div#allowAccess {
       cursor: pointer;
     }
 
@@ -26,14 +23,23 @@
 </head>
 
 <body>
-  <div>
-    RetroTxt cannot read this website
+  <div class="container p-2">
+    <div class="notification">
+      <h1 class="title is-5">RetroTxt</h1>
+      <h2 class="subtitle is-6" id="version"></h2>
+      <div class="block">
+        RetroTxt runs in the background and will attempt to format text files hosted on these websites:
+      </div>
+      <div class="block is-family-monospace" id="websites"></div>
+      <div class="block" id="localfiles">
+        RetroTxt also formats local text files using drag and drop.
+      </div>
+      <div class="notification is-link" id="allowAccess">
+        To include a new website, click here to open settings and add the URL to the
+        <strong>Run RetroTxt on files hosted on these domains</strong> list.
+      </div>
+    </div>
   </div>
-  <p id="allowAccess">To give access, click here to open the Settings and add <span id="hostname">this
-      website</span><br>to the
-    <em>Run RetroTxt on files hosted on these domains</em> list.
-  </p>
-  <p>Then reload this page.</p>
 </body>
 
 </html>
