update to spleen v2

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -728,16 +728,16 @@
                   <p class="subtitle has-text-dark is-size-7 mb-2">Monospaced bitmap fonts
                   </p>
                   <div class="control">
-                    <label class="radio" for="rspleen">
-                      <input type="radio" name="font" id="rspleen" value="spleen"> 8x16
-                    </label>
                     <label class="radio" for="spleen6x12">
-                      <input type="radio" name="font" id="spleen6x12" value="spleen6x12"> 6x12
-                    </label>
+                      <input type="radio" name="font" id="spleen6x12" value="spleen6x12"> 6x12</label>
+                    <label class="radio" for="spleen8x16">
+                      <input type="radio" name="font" id="spleen8x16" value="spleen"> 8x16</label>
                     <label class="radio" for="spleen12x24">
                       <input type="radio" name="font" id="spleen12x24" value="spleen12x24"> 12x24</label>
                     <label class="radio" for="spleen16x32">
                       <input type="radio" name="font" id="spleen16x32" value="spleen16x32"> 16x32</label>
+                    <label class="radio" for="spleen32x64">
+                      <input type="radio" name="font" id="spleen32x64" value="spleen32x64"> 32x64</label>
                   </div>
                   <hr>
                   <h2 class="title has-text-dark is-size-6">Unscii</h2>
