--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -172,6 +172,12 @@
                       <li><a href="https://bulma.io">Bulma CSS framework</a></li>
                     </ul>
                     <p class="menu-label">
+                      Link Conversion
+                    </p>
+                    <ul class="menu-list">
+                      <li><a href="https://linkify.js.org">Linkify</a></li>
+                    </ul>
+                    <p class="menu-label">
                       Icons
                     </p>
                     <ul class="menu-list">
@@ -3359,6 +3365,29 @@
                       </div>
                     </div>
                   </div>
+                </div>
+                <!-- hyperlinks -->
+                <hr>
+                <div>
+                  <h2 class="title has-text-dark is-size-6 columns">
+                    <div class="column">Hyperlinks
+                      <p class="subtitle has-text-dark is-size-7 mb-0 has-text-justified">Detect and convert URLs,
+                        emails, and IP addresses into clickable hyperlinks. This feature relies on the <a
+                          href="https://linkify.js.org" class="has-text-link">Linkify</a>
+                        library to implement and may suffer a performance hit with
+                        large documents.
+                        <br><span class="has-text-info">Any open tabs will require a reload.</span>
+                      </p>
+                      <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
+                          class="has-text-grey">off</span></p>
+                    </div>
+                    <div class="column is-2">
+                      <div class="toggleswitch">
+                        <input type="checkbox" id="hyperlinks" tabindex="0" checked>
+                        <label class="toggleswitch-label" for="hyperlinks"></label>
+                      </div>
+                    </div>
+                  </h2>
                 </div>
                 <!-- background scan lines -->
                 <hr>
