popup clarity for allowing file access.

--- a/ext/html/popup.html
+++ b/ext/html/popup.html
@@ -73,6 +73,10 @@
       <div class="block" id="localfiles">
         RetroTxt also formats local text files using drag and drop.
       </div>
+      <div class="block is-hidden" id="unlockLocalfiles">
+        When <a id="linkUnlock">Allow access to file URLs is toggled</a>, RetroTxt can format local
+        text files using drag and drop.
+      </div>
       <div class="notification is-link" id="allowAccess">
         To include a new website, click here to open settings and add the URL to the
         <strong>Run RetroTxt on files hosted on these domains</strong> list.
